Implemented age and name filters

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <input type="radio" name="sort-type" value="Z-A">Z-A</input>
         <input type="radio" name="sort-type" value="ageAsc">Age ascending</input>
         <input type="radio" name="sort-type" value="ageDesc">Age descending</input>
+
+        <div class="general-label">Filter by name:</div>
+        <input type="text" name="name-filter">
+
+        <div class="general-label">Filter by age:</div>
+        <input type="number" name="age-filter">
       </form>
     </aside>
     <div class="content">
